--- a/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
+++ b/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "RussSurvivor.Runtime",
     "rootNamespace": "RussSurvivor.Runtime",
-    "references": ["GUID:0d8beb7f090555447a6cf5ce9e54dbb4"],
+    "references": [
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
