--- a/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
+++ b/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:fb24642277b1db2449da7ac148ce939d"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
