[RS-31] Configs for test conversation

--- a/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
+++ b/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
@@ -6,7 +6,8 @@
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:fb24642277b1db2449da7ac148ce939d",
-        "GUID:d525ad6bd40672747bde77962f1c401e"
+        "GUID:d525ad6bd40672747bde77962f1c401e",
+        "GUID:49b49c76ee64f6b41bf28ef951cb0e50"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
