--- a/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
+++ b/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
@@ -7,7 +7,11 @@
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:fb24642277b1db2449da7ac148ce939d",
         "GUID:d525ad6bd40672747bde77962f1c401e",
-        "GUID:49b49c76ee64f6b41bf28ef951cb0e50"
+        "GUID:49b49c76ee64f6b41bf28ef951cb0e50",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:593a5b492d29ac6448b1ebf7f035ef33",
+        "GUID:5c01796d064528144a599661eaab93a6",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
