--- a/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
+++ b/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
@@ -12,7 +12,8 @@
         "GUID:593a5b492d29ac6448b1ebf7f035ef33",
         "GUID:5c01796d064528144a599661eaab93a6",
         "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
