--- a/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
+++ b/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
@@ -13,7 +13,9 @@
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:593a5b492d29ac6448b1ebf7f035ef33"
+        "GUID:593a5b492d29ac6448b1ebf7f035ef33",
+        "GUID:8c4dd21966739024fbd72155091d199e",
+        "GUID:299beb10465c46f41abeaf10478b4727"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
