--- a/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
+++ b/Assets/Scripts/Runtime/RussSurvivor.Runtime.asmdef
@@ -15,7 +15,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:593a5b492d29ac6448b1ebf7f035ef33",
         "GUID:8c4dd21966739024fbd72155091d199e",
-        "GUID:299beb10465c46f41abeaf10478b4727"
+        "GUID:299beb10465c46f41abeaf10478b4727",
+        "GUID:0c752da273b17c547ae705acf0f2adf2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
